fixed background repeating on mobile

--- a/css/cover.css
+++ b/css/cover.css
@@ -48,7 +48,7 @@ html,
 body {
   height: 100%;
   background-image: url("../images/Gilman-close.jpeg");
-  background-attachment:fixed;
+  /*background-attachment:fixed;*/
   background-position: center bottom;
   background-size: cover;
   background-repeat: no-repeat;
